log/build_2021-10-14_22-31-37/publisher3431/stderr.log
  File "/home/rsa2021/cpp_pub_sub/install/publisher3431/lib/python3.8/site-packages/publisher3431/subscriber.py", line 35
    marker.color.r = 0.0f
                        ^
SyntaxError: invalid syntax

